lab9/security_group.tf
resource "aws_security_group" "ingress_rules" {
  name = "ingress_rules"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Mở cho mọi IP
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Mở cho mọi IP
  }
}
